# local-tts

./: README.md  pyproject.toml
src/local_tts/: __init__.py  __main__.py
src/local_tts/client/: http.py  main.py  player.py  repl.py  ws.py
src/local_tts/engines/: base.py  kitten.py  kokoro.py  pocket.py  registry.py
src/local_tts/server/: main.py  mcp.py  models.py  routes.py  websocket.py
tests/: conftest.py  test_audio.py  test_engines.py  test_server_http.py  test_server_ws.py
