[project]
name = "local-tts"
version = "0.1.0"
description = "Local TTS server with ElevenLabs-compatible API"
readme = "README.md"
authors = [
    { name = "Saúl Ibarra Corretgé", email = "s@saghul.net" }
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    "numpy>=1.24.0",
    "sounddevice>=0.4.6",
    "pydantic>=2.0.0",
    "kokoro>=0.9.2",
    "pocket-tts>=1.0.0",
    "httpx>=0.28.1",
    "en-core-web-sm",
]

[project.scripts]
local-tts = "local_tts.__main__:main"

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
